# training

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  ideals.sh
app/: CMakeLists.txt  main.cpp
cmake/: CppLint.cmake
data/: in.txt  out.txt  readme.md
include/: calculator.h  constants.h  example.h  gaussian_elimination.h  haarfeature.h  least_squares.h  mathoperations.h  mybiginteger.h  myinteger.h  worker.h
src/: CMakeLists.txt  calculator.cpp  example.cpp  haarfeature.cpp  mathoperations.cpp  mybiginteger.cpp  myinteger.cpp  worker.cpp
test/: CMakeLists.txt  example.cpp  haartest.cpp  least_squares_test.cpp  main.cpp
tools/: cpplint.py
